# MiniConsole

./: .gitignore  Agent.md  CMakeLists.txt  README.md  amend.md  partitions.csv  push_to_github.bat  sdkconfig.defaults
main/: CMakeLists.txt  app_ui.c  app_ui.h  app_ui_apps.c  app_ui_base.c  app_ui_internal.h  app_ui_music.c  app_ui_wifi.c  esp32_s3_szp.c  esp32_s3_szp.h  main.c  sword.pcm  weather_api.c  weather_api.h
main/assets/: Clock_img.c  app_img.c  hello_img.c  img_kidd.c  weather_img.c
main/bt/: ble_hidd_demo.c
